FontCascadeCache: ignore FontSelector ID and Generation for "Simple" cases https://bugs.webkit.org/show_bug.cgi?id=288756 rdar://145786886
Reviewed by Matthieu Dubet and Geoffrey Garen.

We currently have a FontCascadeCache that stores FontCascadeFont objects that can be
retrieved when we resolve style. The key for this is composed by:

1. FontDescriptionKey -> based on the FontCascadeDescription
2. Font family names -> based on FontCascadeDescription
3. CSSFontSelector unique ID -> unique ID is “statically incremented” every time a selector is constructed
4. CSSFontSelector generation -> generation changes every time we process a rule, or start building the selector

Generation and ID change constantly, even for equivalent CSSFontSelectors.
It is not cheap to tell two font selectors are equivalent for all cases as we would have to consider all the possible
descriptors for all rules (@font-faces, palettes, font feature values).

However, if we can tell that a selector is "simple" we should be able to ignore all these factors.

The idea is to classify a CSSFontSelector as “simple”. Simple meaning that there are no author rules attached to it.
When this happens we compose the key for fetching FontCascadeFont with ID and generation 0, which is the same for when
we don’t have a CSSFontSelector. We still use all font-family names and FontDescription information, of course.

* LayoutTests/TestExpectations:
* LayoutTests/imported/blink/fast/text/update-sans-serif-and-recalc-style.html:
* LayoutTests/platform/mac-wk1/TestExpectations:
* LayoutTests/platform/mac/fast/css/font-face-default-font-expected.png:
* LayoutTests/platform/mac/svg/W3C-I18N/tspan-dirRTL-ubEmbed-in-default-context-expected.png:
* LayoutTests/platform/mac/svg/W3C-I18N/tspan-dirRTL-ubEmbed-in-ltr-context-expected.png:
* Source/WebCore/css/CSSCounterStyleRegistry.h:
(WebCore::CSSCounterStyleRegistry::hasAuthorCounterStyles const):
* Source/WebCore/css/CSSFontSelector.cpp:
(WebCore::CSSFontSelector::isSimpl

--- a/LayoutTests/imported/blink/fast/text/update-sans-serif-and-recalc-style.html
+++ b/LayoutTests/imported/blink/fast/text/update-sans-serif-and-recalc-style.html
@@ -3,11 +3,15 @@
 body { font-family: sans-serif; }
 </style>
 <script>
+if (window.testRunner)
+    testRunner.waitUntilDone();
 if (window.internals)
     window.internals.settings.setSansSerifFontFamily("Times", "zyyy");
 
 onload = function() {
     document.body.offsetLeft;
+    if (window.testRunner)
+        testRunner.notifyDone();
     if (window.internals)
         window.internals.settings.setSansSerifFontFamily("Arial", "zyyy");
 }
