REGRESSION(291652@main): accessibility-node-memory-management.html is timing out https://bugs.webkit.org/show_bug.cgi?id=289371 rdar://146514331
Reviewed by Chris Fleizach.

291652@main caused this test to regress only because it changed the timing on when the accessibility tree is built
after a focus change, exposing an existing bug where depending on the interleaving and timing of the recomputation of
is-ignored and handling children-changed, we can compute the wrong accessibility tree.

We could fix this, but really don't need to with the enablement of ENABLE(INCLUDE_IGNORED_IN_CORE_AX_TREE), which
makes us immune to these minor timing differences.

This commit rewrites accessibility-node-memory-management.html to a more modern style that is properly async considering
the dynamic page changes from JS it performs.

In the process of trying to understand how 291652@main caused this issue, I ended up polishing the change up a bit more.
With this commit:

  - We now only initializeSortedIDLists and maintain these eagerly sorted lists when an AT actually needs them. This
    avoids incurring a cost for ATs that will never need these, like Hover Text.

  - We now properly initalize the isolated tree the sorted lists upon creation, rather than creating a tree and waiting
    for them to be synced over, causing a short period where clients can make requests to the tree but the state is
    missing.

  - onDocumentRenderTreeCreation now starts the cache-update timer if it's not active. This is pretty important
    considering this list is processed as part of performDeferredCacheUpdate.

* LayoutTests/accessibility/accessibility-node-memory-management-expected.txt:
* LayoutTests/accessibility/accessibility-node-memory-management.html:
* LayoutTests/platform/mac-wk2/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAttributeChange):
* Source/WebCore/accessibility/AXObjectCache.h:


--- a/LayoutTests/accessibility/accessibility-node-memory-management.html
+++ b/LayoutTests/accessibility/accessibility-node-memory-management.html
@@ -2,41 +2,47 @@
 <html>
 <head>
 <script src="../resources/accessibility-helper.js"></script>
-<script src="../resources/js-test-pre.js"></script>
+<script src="../resources/js-test.js"></script>
 </head>
 <body>
 
 <canvas id="canvas" tabindex="-1"></canvas>
 
-<p id="description"></p>
-<div id="console"></div>
-
 <script>
-    description("This test makes sure that AccessibilityNodeObjects are properly detached when the node they point to is deleted.");
+var output = "This test makes sure that AccessibilityNodeObjects are properly detached when the node they point to is deleted.\n\n";
 
-    if (window.testRunner && window.accessibilityController) {
-        window.jsTestIsAsync = true;
-        testRunner.dumpAsText();
 
-        // Create an ordinary button on the page, focus it and get its accessibility role.
-        var button = document.createElement('button');
-        document.body.appendChild(button);
-        button.focus();
+if (window.testRunner && window.accessibilityController) {
+    window.jsTestIsAsync = true;
 
-        axButton = accessibilityController.focusedElement;
-        buttonRole = axButton.role;
-        debug("Button role: " + buttonRole);
+    var canvas = document.getElementById("canvas");
+    // Create an ordinary button on the page, focus it and get its accessibility role.
+    var button = document.createElement("button");
+    document.body.appendChild(button);
+    button.focus();
+
+    var detachedRole = null;
+    var buttonRole = null;
+    var axCanvas = null;
+    setTimeout(async function() {
+        await waitFor(() => {
+            axButton = accessibilityController.focusedElement;
+            if (!axButton)
+                return false;
+            buttonRole = axButton.role;
+            return buttonRole.toLowerCase().includes("button");
+        });
 
         // Now remove the button from the tree and get the role of the detached accessibility object.
         document.body.removeChild(button);
-        detachedRole = axButton.role;
-        debug("Button role after being detached: " + detachedRole);
-        shouldBeTrue("buttonRole != detachedRole");
+        await waitFor(() => {
+            detachedRole = axButton.role;
+            return detachedRole !== buttonRole;
+        });
 
         // This time create a button that's a child of a canvas element. It will be focusable but not rendered.
         // In particular, this will create an AccessibilityNodeObject rather than an AccessibilityRenderObject.
-        var canvas = document.getElementById('canvas');
-        button = document.createElement('button');
+        button = document.createElement("button");
         canvas.appendChild(button);
 
         // Note: Focusing the button and using that to get its accessibility object creates an extra
@@ -44,34 +50,26 @@
         // canvas and get its first child.
         canvas.focus();
 
-        var axCanvas = null;
-        setTimeout(async function() {
-            await waitFor(() => {
-                axCanvas = accessibilityController.focusedElement;
-                return axCanvas.childrenCount > 0;
-            });
-            axButton = axCanvas.childAtIndex(0);
-            canvasButtonRole = axButton.role;
-            debug("Canvas button role: " + canvasButtonRole);
-            shouldBe("canvasButtonRole", "buttonRole");
+        await waitFor(() => {
+            axCanvas = accessibilityController.accessibleElementById("canvas");
+            axButton = axCanvas?.childAtIndex(0);
+            return axButton && axButton.role === buttonRole;
+        });
 
-            // Now delete the last reference to the button.
-            canvas.removeChild(button);
-            // Explicitly run garbage collection now. Since there are no more references to the button,
-            // it will be destroyed.
-            gc();
+        // Now delete the last reference to the button.
+        canvas.removeChild(button);
+        // Explicitly run garbage collection now. Since there are no more references to the button,
+        // it will be destroyed.
+        gc();
 
-            // Ensure that the accessibility object is detached by checking its role.
-            detachedCanvasButtonRole = axButton.role;
-            debug("Canvas button role after being detached: " + detachedCanvasButtonRole);
-            shouldBe("detachedCanvasButtonRole", "detachedRole");
+        // Ensure that the accessibility object is detached by checking its role.
+        detachedCanvasButtonRole = axButton.role;
+        output += await expectAsync("axButton.role", "detachedRole");
 
-            finishJSTest();
-        }, 0);
-    }
-
+        debug(output);
+        finishJSTest();
+    }, 0);
+}
 </script>
-
-<script src="../resources/js-test-post.js"></script>
 </body>
 </html>
