--- a/LayoutTests/swipe/main-frame-pinning-requirement.html
+++ b/LayoutTests/swipe/main-frame-pinning-requirement.html
@@ -15,26 +15,20 @@ async function runTest()
     // pinned to the edge.
     await startSwipeGesture();
     await completeSwipeGesture();
-    
-    testRunner.clearTestRunnerCallbacks();
-    testRunner.installDidBeginSwipeCallback(didBeginSwipeCallback);
-    testRunner.installWillEndSwipeCallback(willEndSwipeCallback);
-    testRunner.installDidEndSwipeCallback(didEndSwipeCallback);
-    testRunner.installDidRemoveSwipeSnapshotCallback(didRemoveSwipeSnapshotCallback);    
+
+    window.localStorage["hasFinishedFirstSwipe"] = "YES";
 
     // The second swipe should succeed because we are now scrolled to the left edge.
     await startSwipeGesture();
     await completeSwipeGesture();
 }
 
-function didBeginSwipeNotReachedCallback()
-{
-    log("Failure. Should never begin a swipe, because we were in the middle of a scrolling gesture that started when the main frame was not pinned to the left.");
-}
-
 function didBeginSwipeCallback()
 {
-    log("didBeginSwipe");
+    if (window.localStorage["hasFinishedFirstSwipe"] == "YES")
+        log("didBeginSwipe");
+    else
+        log("Failure. Should not begin a swipe, because we were in the middle of a scrolling gesture that started when the main frame was not pinned to the left.");
 }
 
 function willEndSwipeCallback()
@@ -75,15 +69,17 @@ window.onload = async function () {
     document.getElementById("large").innerHTML = isFirstPage() ? "first" : "second";
 
     if (isFirstPage()) {
-        initializeSwipeTest();
+        testRunner.dumpAsText();
+        testRunner.waitUntilDone();
 
-        testRunner.installDidBeginSwipeCallback(didBeginSwipeNotReachedCallback);
+        await initializeSwipeTest();
+
+        window.localStorage["hasFinishedFirstSwipe"] = "NO";
+
+        testRunner.installDidBeginSwipeCallback(didBeginSwipeCallback);
         testRunner.installWillEndSwipeCallback(willEndSwipeCallback);
         testRunner.installDidEndSwipeCallback(didEndSwipeCallback);
         testRunner.installDidRemoveSwipeSnapshotCallback(didRemoveSwipeSnapshotCallback);
-
-        testRunner.dumpAsText();
-        testRunner.waitUntilDone();
 
         setTimeout(function () {
             window.location.href = window.location.href + "?second";
