--- a/LayoutTests/svg/in-html/overflow-repaint.html
+++ b/LayoutTests/svg/in-html/overflow-repaint.html
@@ -13,7 +13,7 @@
 		div + div { background: red; }
 	</style>
 </head>
-<body onload="runRepaintAndPixelTest()">
+<body onload="runRepaintTest()">
 	<div>
 		<svg id="svg" height="100" width="100" viewbox="0 0 100 100">
 			<rect y="100" width="100" height="100" fill="green"/>
