Add support for generating a consumer for CSS property that use group terms https://bugs.webkit.org/show_bug.cgi?id=289305
Reviewed by Darin Adler.

Adds support for generating consumers with "match one or more any order" (eg `[ <foo> || <bar> ]`),
"match all any order" (eg `[ <foo> && <bar> ]`), "match all ordered" (eg `[ <foo> <bar> ]`) and
optional terms (e.g. `<foo>?`).

A new annotation, @(preserves-order) was needed for properties with "any order" grammars (eg || or &&)
but where the order in which things are declared is important such as the `paint-order` property. In
some cases this has been used to maintain existing serialization behavior, such as hanging-punctuation,
but it is not clear that this is necessarily correct and should be evaluated separately.

Together, these allow generation of:
    font-variant-east-asian
    font-variant-ligatures
    font-variant-numeric
    text-autospace
    fill
    stroke
    speak-as
    text-indent
    text-transform
    contain
    hanging-punctuation
    text-decoration-line
    -webkit-text-decorations-in-effect
    text-emphasis-position
    text-emphasis-style
    touch-action
    @font-face font-variant-east-asian
    @font-face font-variant-ligatures
    @font-face font-variant-numeric

Additionally, this change adds generation for the following two properties/descriptors missed
in earlier passes:
    font-width
    @font-face font-weight

While adding generation for font-width, I noticed a few places were still calling
it font-stretch, so I updated those to match the new naming.

* LayoutTests/editing/execCommand/toggle-text-decorations-expected.txt:
* LayoutTests/editing/execCommand/toggle-text-decorations.html:
* LayoutTests/fast/css3-text/css3-text-decoration/getComputedStyle/getComputedStyle-text-decoration-shorthand-ordering-expected.txt:
* LayoutTests/fast/css3-text/css3-text-decoration/getComputedStyle/getComputedStyle-text-decoration-shorthand-ordering.html:
* LayoutTests/imported/w3c/web-platform-test

--- a/LayoutTests/fast/css3-text/css3-text-decoration/getComputedStyle/getComputedStyle-text-decoration-shorthand-ordering.html
+++ b/LayoutTests/fast/css3-text/css3-text-decoration/getComputedStyle/getComputedStyle-text-decoration-shorthand-ordering.html
@@ -36,7 +36,7 @@
 
             debug("-style -line -color ordering (double line-through underline overline green):");
             e.style.webkitTextDecoration = 'double line-through underline overline green';
-            testElementStyle("webkitTextDecorationLine", "-webkit-text-decoration-line", "line-through underline overline");
+            testElementStyle("webkitTextDecorationLine", "-webkit-text-decoration-line", "underline overline line-through");
             testElementStyle("webkitTextDecorationStyle", "-webkit-text-decoration-style", "double");
             testElementStyle("webkitTextDecorationColor", "-webkit-text-decoration-color", "green");
             debug("");
