[HDR] Enable HDR display for SVG <image> elements https://bugs.webkit.org/show_bug.cgi?id=289419# rdar://146582114
Reviewed by Cameron McCormack.

BitmapImage and SVGImage will implement the virtual method hasPaintedHDRContent().
This will enable HDR display support for these images. This method will replace
the existing method headroom() since it does not make sense to have SVGImage
implement it. Similarly setHasPaintedHDRContentForTesting() will replace
setHeadroomForTesting().

LegacyRenderSVGImage needs to implement notifyFinished() which will be used to
mark the document to have setHasPaintedHDRContent(). It will be used also to call
RenderLayer::contentChanged(ContentChangeType::Image) for the SVGImage case.

To go from LegacyRenderSVGImage inside an SVGImage to the parent layer which owns
the SVGImage, the SVGImageChromeClient will be used. A new virtual method called
didFinishLoadingImageForSVGImage() will be added to ChromeClient. This method will
be called form LegacyRenderSVGImage::notifyFinished() through Page. This method
will use the ImageObserver to call the method RenderElement::imageContentChanged()
which will mark the layer for image content change.

* LayoutTests/TestExpectations:
* LayoutTests/compositing/hdr/hdr-basic-image.html:
* LayoutTests/compositing/hdr/hdr-css-image.html:
* LayoutTests/compositing/hdr/hdr-svg-inline-image.html: Copied from LayoutTests/compositing/hdr/hdr-basic-image.html.
* LayoutTests/fast/images/hdr-basic-image.html:
* LayoutTests/fast/images/hdr-css-image.html:
* LayoutTests/fast/images/hdr-svg-inline-image-expected.html: Added.
* LayoutTests/fast/images/hdr-svg-inline-image.html: Copied from LayoutTests/fast/images/hdr-basic-image.html.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/ios/compositing/hdr/hdr-svg-inline-image-expected.txt: Added.
* LayoutTests/platform/mac-wk2/TestExpectations:
* LayoutTests/platform/mac-wk2/compositing/hdr/hdr-svg-inline-image-expected.txt: Added.
* Source/WebCore/h

--- a/LayoutTests/compositing/hdr/hdr-css-image.html
+++ b/LayoutTests/compositing/hdr/hdr-css-image.html
@@ -43,7 +43,7 @@
                     let image = new Image;
                     image.onload = (e) => {
                         if (window.internals)
-                            internals.setHeadroomForTesting(image, 5);
+                            internals.setHasPaintedHDRContentForTesting(image);
 
                         resolve({ width: image.width, height: image.height });
                     };
