--- a/LayoutTests/fast/images/hdr-css-image.html
+++ b/LayoutTests/fast/images/hdr-css-image.html
@@ -42,7 +42,7 @@
                     let image = new Image;
                     image.onload = (e) => {
                         if (window.internals)
-                            internals.setHeadroomForTesting(image, 5);
+                            internals.setHasPaintedHDRContentForTesting(image);
 
                         resolve({ width: image.width, height: image.height });
                     };
