REGRESSION (iOS 18): Loading is blocked when trying to load localhost content from HTTPS website https://bugs.webkit.org/show_bug.cgi?id=279249 rdar://135479521
Reviewed by Matthew Finkel.

Those are treated as potentially trustworthy origin. It is defined in secure context.
https://w3c.github.io/webappsec-secure-contexts/#is-url-trustworthy

* LayoutTests/http/tests/security/mixedContent/insecure-localhost-image-in-main-frame-UpgradeMixedContent-expected.txt:
* LayoutTests/http/tests/security/mixedContent/resources/frame-with-insecure-localhost-image.html:
* Source/WebCore/loader/MixedContentChecker.cpp:
(WebCore::logConsoleWarningForUpgrade):
(WebCore::MixedContentChecker::shouldUpgradeInsecureContent):
(WebCore::MixedContentChecker::canModifyRequest):
(WebCore::shouldBlockInsecureContent):
* Source/WebCore/loader/MixedContentChecker.h:
* Tools/TestWebKitAPI/Tests/WebCore/MixedContentChecker.cpp:
(TestWebKitAPI::TEST(MixedContentChecker, CanModifyRequest)):

Canonical link: https://commits.webkit.org/291988@main

--- a/LayoutTests/http/tests/security/mixedContent/resources/frame-with-insecure-localhost-image.html
+++ b/LayoutTests/http/tests/security/mixedContent/resources/frame-with-insecure-localhost-image.html
@@ -1,4 +1,5 @@
 <img src="http://localhost:8080/security/resources/compass.jpg">
+<img src="http://127.0.0.1:8080/security/resources/compass.jpg">
 <script>
 window.onload = function() {
     if (window.opener)
