http/wpt/service-workers/service-worker-routes.html is flaky https://bugs.webkit.org/show_bug.cgi?id=289460 rdar://problem/146655924
Reviewed by Chris Dumez.

According bot results, http/wpt/service-workers/service-worker-routes.html is flaky due to the last subtest of the second test.
We temporarily disable that subtest (waiting for the service worker to become redundant) to make the test stable, as this does not reduce the coverage.

* LayoutTests/http/wpt/service-workers/service-worker-routes.html:

Canonical link: https://commits.webkit.org/292070@main

--- a/LayoutTests/http/wpt/service-workers/service-worker-routes.html
+++ b/LayoutTests/http/wpt/service-workers/service-worker-routes.html
@@ -44,7 +44,8 @@ promise_test(async test => {
 
     assert_equals(result, "TypeError: Too many routes are registered");
     assert_equals(counter, 256);
-    await waitForState(worker, "redundant");
+    // FIXME: We should check that worker state goes to "redundant".
+    // await waitForState(worker, "redundant");
 }, "Try to register too many routes incrementally");
 
 promise_test(async (test) => {
