service worker addRoutes promise should delay service worker install rdar://146482853 https://bugs.webkit.org/show_bug.cgi?id=289339
Reviewed by Brady Eidson.

As per https://w3c.github.io/ServiceWorker/#register-router-method, install cannot happen until addRoutes promises are settled.
Update InstallEvent::addRoutes accordingly.

The added test checks that we can add one route at a time outside of the install event handler without use of waitUntil.

* LayoutTests/http/wpt/service-workers/service-worker-add-routes-delay-install-worker.js: Added.
(async addRoute):
* LayoutTests/http/wpt/service-workers/service-worker-routes-expected.txt:
* LayoutTests/http/wpt/service-workers/service-worker-routes.html:
* Source/WebCore/workers/service/InstallEvent.cpp:
(WebCore::InstallEvent::addRoutes):

Canonical link: https://commits.webkit.org/292074@main

--- a/LayoutTests/http/wpt/service-workers/service-worker-routes.html
+++ b/LayoutTests/http/wpt/service-workers/service-worker-routes.html
@@ -60,6 +60,18 @@ promise_test(async (test) => {
     worker.postMessage("addRoutes");
     assert_equals(await new Promise(resolve => navigator.serviceWorker.onmessage = e => resolve(e.data)), "OK");
 }, "add route when not installing");
+
+promise_test(async (test) => {
+    let registration = await navigator.serviceWorker.getRegistration("4");
+    if (registration)
+        await registration.unregister();
+    registration = await navigator.serviceWorker.register("service-worker-add-routes-delay-install-worker.js", { scope : "4" });
+    const worker = registration.installing;
+
+    await waitForState(worker, "activated");
+    worker.postMessage("getResult");
+    assert_equals(await new Promise(resolve => navigator.serviceWorker.onmessage = e => resolve(e.data)), "OK");
+}, "add route extend installation of service worker");
 </script>
 </body>
 </html>
