Update WebGL conformance tests 2024-12-10 (2010c617adfff4dbbb7b4c6bd6b3b805c5ea78dc) https://bugs.webkit.org/show_bug.cgi?id=284800 rdar://problem/141601829
Unreviewed, import from upstream.

* LayoutTests/webgl/resources/webgl_test_files/conformance/offscreencanvas/offscreencanvas-transfer-image-bitmap.html:
* LayoutTests/webgl/resources/webgl_test_files/conformance2/offscreencanvas/offscreencanvas-transfer-image-bitmap.html:
* LayoutTests/webgl/resources/webgl_test_files/conformance2/wasm/bufferdata-16gb-wasm-memory.html:
* LayoutTests/webgl/resources/webgl_test_files/conformance2/wasm/buffersubdata-16gb-wasm-memory.html:
* LayoutTests/webgl/resources/webgl_test_files/conformance2/wasm/getbuffersubdata-16gb-wasm-memory.html:
* LayoutTests/webgl/resources/webgl_test_files/conformance2/wasm/readpixels-16gb-wasm-memory.html:
* LayoutTests/webgl/resources/webgl_test_files/conformance2/wasm/teximage2d-16gb-wasm-memory.html:
* LayoutTests/webgl/resources/webgl_test_files/conformance2/wasm/texsubimage2d-16gb-wasm-memory.html:
* LayoutTests/webgl/resources/webgl_test_files/js/tests/offscreencanvas-transfer-image-bitmap.js:
(draw):
(testContent):

Canonical link: https://commits.webkit.org/292084@main

--- a/LayoutTests/webgl/resources/webgl_test_files/conformance2/offscreencanvas/offscreencanvas-transfer-image-bitmap.html
+++ b/LayoutTests/webgl/resources/webgl_test_files/conformance2/offscreencanvas/offscreencanvas-transfer-image-bitmap.html
@@ -17,18 +17,6 @@ found in the LICENSE.txt file.
 <body>
   <div id="description"></div>
   <div id="console"></div>
-  <script id='myWorker' type='text/worker'>
-  self.onmessage = function(e) {
-      var canvas = new OffscreenCanvas(128, 128);
-      var gl = canvas.getContext("webgl2");
-      gl.clearColor(1.0, 1.0, 0.0, 1.0);
-      gl.clear(gl.COLOR_BUFFER_BIT);
-      var image = canvas.transferToImageBitmap();
-
-      self.postMessage({ bitmap: image },
-                       [ image ]);
-  };
-  </script>
   <script>
     "use strict";
     description("This test ensures that the transferToImageBitmap function of OffscreenCanvas webgl2 context is functional.");
@@ -36,14 +24,7 @@ found in the LICENSE.txt file.
         testPassed("No OffscreenCanvas support");
         finishTest();
     } else {
-      var blob = new Blob([document.getElementById('myWorker').textContent]);
-      var worker = new Worker(URL.createObjectURL(blob));
-
-      worker.onmessage = function(msg) {
-          testTransferToImageBitmap("webgl2", msg.data.bitmap);
-          finishTest();
-      }
-      worker.postMessage("Start Worker");
+      runTest();
     }
   </script>
 </body>
