REGRESSION(287842@main, 288511@main, 287919@main): Broke out-of-flow box positioning inside relative inline box
https://bugs.webkit.org/show_bug.cgi?id=289722
rdar://146469641

Unreviewed revert.

Revert `unicode-bidi` implementation.

* LayoutTests/fast/css/default-bidi-css-rules-expected.txt:
* LayoutTests/fast/css/default-bidi-css-rules.html:
* LayoutTests/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/bidi-rendering/unicode-bidi-ua-rules-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/flow-content-0/search-styles-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/flow-content-0/search-styles-iso-8859-8-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/the-fieldset-and-legend-elements/legend-expected.txt:
* LayoutTests/inspector/css/shadow-scoped-style-expected.txt:
* LayoutTests/fast/css/all-keyword-direction-expected.html:
* Source/WebCore/css/html.css:
(hr, bdi, output):
(address, blockquote, center, div, figure, figcaption, footer, form, header, hr,): Deleted.
(textarea[dir=auto i], pre[dir=auto i]): Deleted.
* Source/WebCore/html/HTMLElement.cpp:
(WebCore::unicodeBidiAttributeForDirAuto):
(WebCore::HTMLElement::collectPresentationalHintsForAttribute):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/AttrStyle.mm:
(TEST(WebKit, AttrStyle)):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEditActions.mm:
(TestWebKitAPI::TEST(WKWebViewEditActions, ModifyTextWritingDirection)):

Canonical link: https://commits.webkit.org/292138@main

--- a/LayoutTests/fast/css/default-bidi-css-rules.html
+++ b/LayoutTests/fast/css/default-bidi-css-rules.html
@@ -20,11 +20,13 @@ function styleOf(name, attributes) {
 }
 
 var tests = [
-    ['div', {}, 'ltr', 'isolate'],
+    // FIXME: Below should be `isolate-override`.
+    ['div', {}, 'ltr', 'normal'],
     ['div', {'dir': 'ltr'}, 'ltr', 'isolate'],
     ['div', {'dir': 'rtl'}, 'rtl', 'isolate'],
     ['div', {'dir': 'auto'}, 'ltr', 'isolate'],
-    ['div', {'dir': ''}, 'ltr', 'isolate'],
+    // FIXME: Below should be `isolate-override`.
+    ['div', {'dir': ''}, 'ltr', 'normal'],
 
     ['span', {}, 'ltr', 'normal'],
     ['span', {'dir': 'ltr'}, 'ltr', 'isolate'],
@@ -48,7 +50,8 @@ var tests = [
     ['bdo', {}, 'ltr', 'isolate-override'],
     ['bdo', {'dir': 'ltr'}, 'ltr', 'isolate-override'],
     ['bdo', {'dir': 'rtl'}, 'rtl', 'isolate-override'],
-    ['bdo', {'dir': 'auto'}, 'ltr', 'isolate-override'],
+    // FIXME: Below should be `isolate-override`.
+    ['bdo', {'dir': 'auto'}, 'ltr', 'isolate'],
     ['bdo', {'dir': ''}, 'ltr', 'isolate-override'],
 
     ['textarea', {}, 'ltr', 'normal'],
@@ -57,11 +60,13 @@ var tests = [
     ['textarea', {'dir': 'auto'}, 'ltr', 'plaintext'],
     ['textarea', {'dir': ''}, 'ltr', 'normal'],
 
-    ['pre', {}, 'ltr', 'isolate'],
+    // FIXME: Below should be `isolate`.
+    ['pre', {}, 'ltr', 'normal'],
     ['pre', {'dir': 'ltr'}, 'ltr', 'isolate'],
     ['pre', {'dir': 'rtl'}, 'rtl', 'isolate'],
     ['pre', {'dir': 'auto'}, 'ltr', 'plaintext'],
-    ['pre', {'dir': ''}, 'ltr', 'isolate'],
+    // FIXME: Below should be `isolate`.
+    ['pre', {'dir': ''}, 'ltr', 'normal'],
 ].forEach(function (test) {
     shouldBe('styleOf("' + test[0] + '", ' + JSON.stringify(test[1]) + ').direction', '"' + test[2] + '"');
     container.innerHTML = '';
