fast/mediastream/MediaDevices-addEventListener.html is flaky in Debug bots rdar://146938006 https://bugs.webkit.org/show_bug.cgi?id=289687
Reviewed by Eric Carlson.

The test is flaky due to a CONSOLE message stating that a microphone track is failing.
We are waiting for the ended event so that the CONSOLE message is always present.

* LayoutTests/fast/mediastream/MediaDevices-addEventListener.html:

Canonical link: https://commits.webkit.org/292145@main

--- a/LayoutTests/fast/mediastream/MediaDevices-addEventListener.html
+++ b/LayoutTests/fast/mediastream/MediaDevices-addEventListener.html
@@ -19,7 +19,8 @@
 
         testRunner.setUserMediaPermission(true);
 
-        await navigator.mediaDevices.getUserMedia({ audio:true, video:true });
+        const stream = await navigator.mediaDevices.getUserMedia({ audio:true, video:true });
+        const captureFailurePromise = new Promise(resolve => stream.getAudioTracks()[0].onended = resolve);
 
         let devices = await navigator.mediaDevices.enumerateDevices();
 
@@ -38,6 +39,7 @@
             }, 5000);
             testRunner.addMockCameraDevice("id1", "my camera");
         });
+        return captureFailurePromise;
     }, "Capture 'devicechange' event with addEventListener");
     </script>
 </head>
