Make entityTransform read-only always on StageMode Orbit https://bugs.webkit.org/show_bug.cgi?id=289727 rdar://146901614
Reviewed by Ada Chan.

This PR updates the behavior of how the entityTransform is updated via JS. Because we do not want
the entityTransform to update whenever the stagemode attribute is not set to none, this means that
any calls to update and compute transform while the stagemode attribute is orbit should do an early
return. The exception is when we are computing the initial placement/fit of the model, and when
we toggle the portal for the model.

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::setEntityTransform):
- Perform an early return if we are setting the entityTransform via JS

* Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.mm:
(WebKit::ModelProcessModelPlayerProxy::computeTransform):
(WebKit::ModelProcessModelPlayerProxy::updateTransform):
- Remove our previous checks for computing and updating the transform since
the check has now moved to the HTMLModelElement level and therefore does not
call the said functions while stagemode is set.

* LayoutTests/model-element/model-element-entity-transform-expected.txt:
* LayoutTests/model-element/model-element-entity-transform.html:
- Added layout test to verify expected behavior

Canonical link: https://commits.webkit.org/292182@main

--- a/LayoutTests/model-element/model-element-entity-transform.html
+++ b/LayoutTests/model-element/model-element-entity-transform.html
@@ -49,5 +49,20 @@ promise_test(async t => {
     });
 }, `<model> gets the identity entityTransform after model source removal`);
 
+promise_test(async t => {
+    const [model, source] = createModelAndSource(t, "resources/2x2x2-positive.usdz");
+    await model.ready;
+    let originalTransform = model.entityTransform;
+    assert_equals(model.stageMode, "");
+    assert_3d_matrix_is_identity(originalTransform, false);
+
+    model.stageMode = "orbit";
+    assert_equals(model.stageMode, "orbit");
+
+    let scaledTransform = originalTransform.scale(2, 2, 2);
+    model.entityTransform = scaledTransform;
+    assert_3d_matrix_equals(model.entityTransform, originalTransform);
+}, `<model> ignores entityTransform when stagemode is set`);
+
 </script>
 </body>
