--- a/LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/intrinsic-sizing/masonry-intrinsic-sizing-cols-004-mix1-expected.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/intrinsic-sizing/masonry-intrinsic-sizing-cols-004-mix1-expected.html
@@ -61,7 +61,7 @@ item {
 <grid>
   <item>1</item>
   <item>2 2</item>
-  <item style="grid-row: span 2">3 3</item>
+  <item style="grid-row: span 2;">3 3</item>
   <item>4</item>
   <item style="width:2ch; grid-column:2">5 5</item>
 
