WebCodecsVideoEncoder::configure should only update rates if there is an internal encoder rdar://147294536 https://bugs.webkit.org/show_bug.cgi?id=289943
Reviewed by Jean-Yves Avenard.

We optimize the configure call when only bitrate/framerate changes.
When a reset call happens between two configure calls, we end up with no internal encoder.
In that case, the second configure call should do a regular full configure.

* LayoutTests/http/wpt/webcodecs/encode-bitrate-change-expected.txt:
* LayoutTests/http/wpt/webcodecs/encode-bitrate-change.html:
* Source/WebCore/Modules/webcodecs/WebCodecsVideoEncoder.cpp:
(WebCore::WebCodecsVideoEncoder::configure):

Canonical link: https://commits.webkit.org/292301@main

--- a/LayoutTests/http/wpt/webcodecs/encode-bitrate-change.html
+++ b/LayoutTests/http/wpt/webcodecs/encode-bitrate-change.html
@@ -94,6 +94,30 @@ function doTest(codec, title)
 doTest('vp8', "VP8");
 doTest('vp09.00.10.08', "VP9");
 doTest('avc1.42001E', "H.264");
+
+promise_test(async t => {
+    const encoder = new VideoEncoder({
+        output(chunk, metadata) { },
+        error(e) { }
+    });
+
+    const config = {
+        codec:'avc1.42001E',
+        width:320,
+        height:240,
+        bitrate:1000000,
+        framerate: 10
+    };
+
+    encoder.configure(config);
+    await new Promise(resolve => setTimeout(resolve, 500));
+    encoder.reset();
+
+    config.bitrate = 100000;
+    config.framerate = 1;
+
+    encoder.configure(config);
+}, "Configure after a reset");
 </script>
 </body>
 </html>
