Add support for the CSSStyleProperties and CSSFontFaceDescriptors interfaces https://bugs.webkit.org/show_bug.cgi?id=289925
Reviewed by Antti Koivisto.

Updates the hierarchy for CSSStyleDeclaration to start working
towards matching the latest CSSOM and CSS Font specs:

https://drafts.csswg.org/cssom/#cssstyleproperties (CSSStyleProperties)
https://drafts.csswg.org/css-fonts-5/#cssfontfacedescriptors (CSSFontFaceDescriptors)

New hierarchy is:

    CSSStyleDeclaration (abstract)
        - CSSStyleProperties (abstract)
            - PropertySetCSSStyleProperties
                - StyleRuleCSSStyleProperties
                - InlineCSSStyleProperties
            - CSSComputedStyleDeclaration
        - CSSFontFaceDescriptors

Future changes will add more siblings to CSSStyleProperties and
CSSFontFaceDescriptors.

* LayoutTests/fast/css/Element-style.html:
* LayoutTests/fast/css/style-enumerate-properties-expected.txt:
* LayoutTests/fast/css/style-enumerate-properties.html:
* LayoutTests/fast/dom/collection-iterators-expected.txt:
* LayoutTests/fast/dom/collection-iterators.html:
* LayoutTests/fast/dom/wrapper-classes-expected.txt:
* LayoutTests/fast/dom/wrapper-classes.html:
* LayoutTests/imported/w3c/web-platform-tests/css/cssom/cssom-fontfacerule-constructors-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/cssom/cssom-fontfacerule-constructors.html:
* LayoutTests/imported/w3c/web-platform-tests/css/cssom/idlharness-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/cssom/idlharness.html:
* LayoutTests/imported/w3c/web-platform-tests/interfaces/cssom.idl:
* Source/WebCore/CMakeLists.txt:
* Source/WebCore/DerivedSources-input.xcfilelist:
* Source/WebCore/DerivedSources-output.xcfilelist:
* Source/WebCore/DerivedSources.make:
* Source/WebCore/Headers.cmake:
* Source/WebCore/Modules/highlight/Highlight.h:
* Source/WebCore/SaferCPPExpectations/ForwardDeclCheckerExpectations:
* Source/WebCore/SaferCPPExpectations/NoUncheckedPtrMemberCheckerExpe

--- a/LayoutTests/fast/css/Element-style.html
+++ b/LayoutTests/fast/css/Element-style.html
@@ -22,10 +22,10 @@ test(() => {
 
 test(() => {
     const testDiv = document.getElementById("testDiv");
-    assert_equals(testDiv.style.__proto__, CSSStyleDeclaration.prototype, "HTMLElement.style type");
+    assert_equals(testDiv.style.__proto__, CSSStyleProperties.prototype, "HTMLElement.style type");
 
     const testSVG = document.getElementById("testSVG");
-    assert_equals(testSVG.style.__proto__, CSSStyleDeclaration.prototype, "SVGElement.style type");
+    assert_equals(testSVG.style.__proto__, CSSStyleProperties.prototype, "SVGElement.style type");
 }, "'style' property type");
 
 test(() => {
