--- a/LayoutTests/fast/dom/wrapper-classes.html
+++ b/LayoutTests/fast/dom/wrapper-classes.html
@@ -103,7 +103,7 @@ function runTest()
     test("stylesheet", "CSSStyleSheet");
     test("stylesheet.cssRules", "CSSRuleList");
     test("stylesheet.cssRules.item(0)", "CSSStyleRule");
-    test("stylesheet.cssRules.item(0).style", "CSSStyleDeclaration");
+    test("stylesheet.cssRules.item(0).style", "CSSStyleProperties");
     test("stylesheet.media", "MediaList");
 
     debug('');
