--- a/LayoutTests/imported/w3c/web-platform-tests/css/cssom/idlharness.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/css/cssom/idlharness.html
@@ -49,7 +49,7 @@ idl_test(
       CSSMarginRule: ['sheet.cssRules[2].cssRules[0]'],
       CSSMediaRule: ['sheet.cssRules[3]'],
       CSSStyleRule: ['sheet.cssRules[4]'],
-      CSSStyleDeclaration: [
+      CSSStyleProperties: [
         'sheet.cssRules[4].style', // CSSStyleRule
         'sheet.cssRules[2].style', // CSSPageRule
         'sheet.cssRules[2].cssRules[0].style', // CSSMarginRule
