REGRESSION(279806@main): [ macOS ] media/vp9.html is a constant timeout or failure https://bugs.webkit.org/show_bug.cgi?id=289952 rdar://143066944
Reviewed by Youenn Fablet.

In 287137@main we removed the VideoToolbox SW plugins as it was believed to no
longer be in use and could be replaced by a WebCoreDecompressionSession decoder instead.
Additionally in 279806@main, we removed the ability to register the VT SW VP9 decoder.

While vp9 is mostly found in webm and it can be found in a MP4 container.
The removal of the VT plugins didn't impact MSE but it did impact vp9 in mp4 CRABS
on machines that have no VP9 hardware decoder (such as intel Mac pro and iMac Pro)

We partially revert 287137@main to re-introduce the VP9 SW plugin and enable the VP9 SW decoder
on machines with HW VP9.
VP9 decoding on WK1 wasn't actually usable and is turned off by default.

Covered by existing test.

* LayoutTests/media/vp9.html: Fix typo in test.
* LayoutTests/platform/ios/TestExpectations: Skip test. Simulator doesn't have VP9 decoder (either software or hardware)
* LayoutTests/platform/mac-wk1/TestExpectations: Skip test. It was non-functional on WK1 and was incorrectly passing.
* LayoutTests/platform/mac-wk2/TestExpectations: Re-enable test.
* PerformanceTests/DecoderTest/DecoderTest/main.mm:
(main):
* Source/ThirdParty/libwebrtc/CMakeLists.txt:
* Source/ThirdParty/libwebrtc/Configurations/libwebrtc.exp:
* Source/ThirdParty/libwebrtc/Source/webrtc/webkit_sdk/WebKit/WebKitDecoderReceiver.cpp: Added.
(webrtc::WebKitDecoderReceiver::WebKitDecoderReceiver):
(webrtc::WebKitDecoderReceiver::~WebKitDecoderReceiver):
(webrtc::WebKitDecoderReceiver::initializeFromFormatDescription):
(webrtc::WebKitDecoderReceiver::pixelBufferPool):
(webrtc::WebKitDecoderReceiver::decoderFailed):
(webrtc::WebKitDecoderReceiver::Decoded):
* Source/ThirdParty/libwebrtc/Source/webrtc/webkit_sdk/WebKit/WebKitDecoderReceiver.h: Added.
* Source/ThirdParty/libwebrtc/Source/webrtc/webkit_sdk/WebKit/WebKitVP9Decoder.

--- a/LayoutTests/platform/mac/media/mediacapabilities/vp9-decodingInfo-sw.html
+++ b/LayoutTests/platform/mac/media/mediacapabilities/vp9-decodingInfo-sw.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- webkit-test-runner [ allowTestOnlyIPC=true ] -->
+<!DOCTYPE html> <!-- webkit-test-runner [ allowTestOnlyIPC=true SWVPDecodersAlwaysEnabled=true ] -->
 <html>
 <head>
     <script src=../../../../media/video-test.js></script>
